--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "ngrok": "twilio phone-numbers:update '+16782456092' --sms-url='http://localhost:1337/sms'"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "mongoose": "^5.7.12",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.1"
+    "nodemon": "^2.0.1",
+    "twilio": "^3.37.1"
   }
 }
