--- a/package.json
+++ b/package.json
@@ -5,18 +5,27 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "ngrok": "twilio phone-numbers:update '+16782456092' --sms-url='http://localhost:1337/sms'"
+    "ngrok": "twilio phone-numbers:update '+14158493899' --sms-url='http://localhost:1337/sms'",
+    "migrate:create": "db-migrate create",
+    "migrate:up": "db-migrate up",
+    "migrate:down": "db-migrate down"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
+    "db-migrate-pg": "^1.2.2",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "knex": "^0.21.8",
     "mongoose": "^5.7.12",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.1",
-    "twilio": "^3.37.1"
+    "pg": "^8.4.2",
+    "prettier": "^1.19.1",
+    "twilio": "^3.37.1",
+    "uuid": "^8.3.1"
   }
 }
