--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "migrate:create": "db-migrate create",
     "migrate:up": "db-migrate up",
     "migrate:down": "db-migrate down",
-    "heroku": "npm run migrate:up && npm start"
+    "heroku": "npm i && npm run migrate:up && npm start"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
