--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "ngrok": "twilio phone-numbers:update '+12094106857' --sms-url='http://localhost:1337/sms'",
+    "ngrok": "twilio phone-numbers:update '+12094106857' --sms-url='http://localhost:1337/sms/reply'",
     "migrate:create": "db-migrate create",
     "migrate:up": "db-migrate up",
     "migrate:down": "db-migrate down",
-    "heroku": "npm i && npm run migrate:up && npm start"
+    "heroku:release": "db-migrate up",
+    "heroku:web": "npm install && npm start"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
