--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "migrate:create": "db-migrate create",
     "migrate:up": "db-migrate up",
     "migrate:down": "db-migrate down",
-    "heroku:release": "db-migrate up",
+    "heroku:release": "npm install -g db-migrate-pg && db-migrate up",
     "heroku:web": "npm install && npm start"
   },
   "dependencies": {
