--- a/package.json
+++ b/package.json
@@ -14,17 +14,21 @@
     "heroku:web": "npm install && npm start"
   },
   "dependencies": {
+    "aws-sdk": "^2.784.0",
+    "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "db-migrate-pg": "^1.2.2",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-fileupload": "^1.2.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "knex": "^0.21.8",
     "mongoose": "^5.7.12",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.1",
     "pg": "^8.4.2",
     "prettier": "^1.19.1",
